fixed links on index page

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <div class="fl_right">
       <ul>
 
-          <a href="#">
+          <a href="admissions.html">
             <li>
               <div class="imgholder" style="background-image:url(images/iconAdmission.png)"></div>
               <br><span class="title">Addmissions</span>
@@ -79,7 +79,7 @@
             </li>
           </a>
 
-          <a href="#">
+          <a href="careers.html">
             <li>
               <div class="imgholder" style="background-image:url(images/iconCareers.png)"></div>
               <br><span class="title">Careers</span>
@@ -90,7 +90,7 @@
             </li>
           </a>
 
-          <a href="#">
+          <a href="faculty.html">
             <li>
               <div class="imgholder" style="background-image:url(images/iconStaff.png)"></div>
               <br><span class="title">Faculty & Staff</span>
@@ -101,7 +101,7 @@
             </li>
           </a>
 
-          <a href="#">
+          <a href="fee-structure.html">
             <li>
               <div class="imgholder" style="background-image:url(images/iconFee.png)"></div>
               <br><span class="title">Fee Structure</span>
@@ -112,7 +112,7 @@
             </li>
           </a>
 
-          <a href="#">
+          <a href="managing-committee.html">
             <li>
               <div class="imgholder" style="background-image:url(images/iconManaging.png)"></div>
               <br><span class="title">Managing Committee</span>
@@ -124,7 +124,7 @@
           </a>
 
 
-          <a href="#">
+          <a href="contact.html">
             <li class="last">
               <div class="imgholder" style="background-image:url(images/iconContact.png)"></div>
               <br><span class="title">Contact Us</span>
