--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <title>Daffodil Public School</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <meta http-equiv="imagetoolbar" content="no" />
+<link rel="shortcut icon" type="image/png" href="/favicon.png"/>
+<link rel="shortcut icon" type="image/png" href="http://daffodilpublicschool.org/favicon.png"/>
 <link rel="stylesheet" href="styles/layout.css" type="text/css" />
 <script type="text/javascript" src="scripts/jquery-1.4.1.min.js"></script>
 <script type="text/javascript" src="scripts/jquery.slidepanel.setup.js"></script>
@@ -124,13 +126,13 @@
           </a>
 
 
-          <a href="contact.html">
+          <a href="disabledChildrenData.doc">
             <li class="last">
-              <div class="imgholder" style="background-image:url(images/iconContact.png)"></div>
-              <br><span class="title">Contact Us</span>
+              <div class="imgholder" style="background-image:url(images/iconDisabled.png)"></div>
+              <br><span class="title">For Disabled Children</span>
               <div class="description">
-                Details of admission<br>
-                for students
+                Data and facilities<br>
+                for disabled children
               </div>
             </li>
           </a>
