--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
               <div class="imgholder" style="background-image:url(images/iconManaging.png)"></div>
               <br><span class="title">Managing Committee</span>
               <div class="description">
-                Details of admission<br>
-                for students
+                Details of the<br>
+                managin committee
               </div>
             </li>
           </a>
